--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.0",
+    "@astrojs/cloudflare": "^11.0.4",
     "@astrojs/tailwind": "^5.0.2",
     "@fontsource-variable/inter": "^5.0.8",
     "@types/alpinejs": "^3.13.10",
@@ -19,6 +20,7 @@
     "astro": "^3.6.4",
     "astro-compress": "^2.2.3",
     "nodemailer": "^6.9.14",
+    "resend": "^3.5.0",
     "swiper": "^11.0.4",
     "tailwindcss": "^3.3.3"
   },
