--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,7 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "allowJs": true
-  }
+  },
+  "target": "esnext",
+  "module": "es2020",
 }
